# Platformer

./: README.md  env.yml  game.py  pyproject.toml  run_game.py  sprites.py
Levels/: level1.txt
SRC/Platformer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SRC/my_sprites/: my_sprites.py
SRC/my_sprites/my_functions/: logic.py  read_graphics.py
