[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Platformer"
version = "0.0.1"
authors = [
  { name="Bastian Malte Winter", email="bastianmaltewinter39@gmail.com" },
]
description = "Platformer"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"pygame >=2.5.2"
]
[tool.setuptools.packages.find]
where = ["SRC"]
include = ["my_functions","my_sprites"]
namespaces = false
